Fix contrast issues
- (Node Label Contrast)
Before: https://imgur.com/a/lfrroyX
After: https://imgur.com/a/WBngjzG

- (User-agent text)
Before: https://imgur.com/a/XsAUqnR
After: https://imgur.com/a/Z4b5Uam

Bug: 409942756,409807006
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6449956
Commit-Queue: Sylvester Elorm Coch <elormcoch@microsoft.com>

--- a/front_end/panels/elements/domLinkifier.css
+++ b/front_end/panels/elements/domLinkifier.css
@@ -39,7 +39,7 @@
 }
 
 .node-label-name {
-  color: var(--sys-color-token-property-special);
+  color: var(--sys-color-token-tag);
 
   .dynamic-link & {
     color: var(--text-link);
